syntax = "proto3";

package batteries.v1.tesla;

option go_package = "github.com/pbtrad/go_batteries/proto/batteries/v1/tesla";

service TeslaBatteryService {
  rpc GetTeslaBatteryStatus(GetTeslaBatteryStatusRequest) returns (TeslaBatteryState) {}
  rpc UpdateBackupReserve(UpdateBackupReserveRequest) returns (UpdateBackupReserveResponse) {}
  rpc ToggleStormMode(ToggleStormModeRequest) returns (ToggleStormModeResponse) {}
  rpc SetOperationMode(SetOperationModeRequest) returns (SetOperationModeResponse) {}
  rpc GetPowerUsage(GetPowerUsageRequest) returns (GetPowerUsageResponse) {}
}

message TeslaBatteryState {
  string site_id = 1;
  int32 backup_reserve = 2;
  bool battery_charging = 3;
  bool battery_discharging = 4;
  int32 consumption_w = 5;
  int32 grid_import_w = 6;
  int32 grid_export_w = 7;
  int32 production_w = 8;
  double storage_level = 9;
  string system_status = 10;
  bool storm_mode_enabled = 11;
  string operation_mode = 12;
  string last_updated = 13;
}

message GetTeslaBatteryStatusRequest {}

message UpdateBackupReserveRequest {
  int32 percentage = 1;
}

message UpdateBackupReserveResponse {
  string message = 1;
  int32 percentage = 2;
}

message ToggleStormModeRequest {
  bool enable = 1;
}

message ToggleStormModeResponse {
  string message = 1;
  bool enabled = 2;
}

message SetOperationModeRequest {
  string mode = 1;
}

message SetOperationModeResponse {
  string message = 1;
  string mode = 2;
}

message GetPowerUsageRequest {}

message GetPowerUsageResponse {
  int32 grid_import_w = 1;
  int32 grid_export_w = 2;
  double battery_storage_level = 3;
  string timestamp = 4;
}